--- a/src/components/compstyles/navbar.css
+++ b/src/components/compstyles/navbar.css
@@ -115,6 +115,8 @@ nav{
         padding: 5px 10px;
         box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 10px;
         height: 50px;
+        right: -1px;
+        position: relative;
     }
     #nav_menu_cont{
         width: 35px;
